--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>My first Webpage</title>
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <img src="Images/pfp.jpg">
+    <img src="Images/pfp.jpg" alt="Image not found">
     <p class="username">@ShahariarArpo</p>
     <p>I wanna kill myself :v</p>
 </body>
