--- a/index.html
+++ b/index.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>My first Webpage</title>
-    <style>
-        img {
-            width: 100px;
-            border-radius: 50px;
-            float: left;
-            margin-right: 10px;
-        }
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-        .username {
-            font-weight: bold;
-        }
-
-        p {
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        }
-    </style>
-</head>
-
-<body>
-    <img src="Images/pfp.jpg" alt="Image not found">
+  <body>
+    <h1>Hello Everyone</h1>
+    <p>Today we will learn HTML and CSS</p>
+    <h2>About Me</h2>
+    <img src="Images/pfp.jpg" alt="Image not found" />
     <p class="username">@ShahariarArpo</p>
-    <p>I wanna kill myself :v</p>
-</body>
-
+    <p>Hello <em>Everyone</em> >.<</p>
+    <style>
+      em {
+        font-style: normal;
+        font-weight: bold;
+      }
+    </style>
+  </body>
 </html>
