--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <img src="Images/pfp.jpg" alt="Image not found" />
     <p class="username">@ShahariarArpo</p>
     <p>Hello <em>Everyone</em> >.<</p>
+    <a href="https://github.com/shahariarpo">About Me</a>
     <style>
       em {
         font-style: normal;
