update: reorganized files

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <title>My first Webpage</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
 
   <body>
     <h1>Hello Everyone</h1>
     <p>Today we will learn HTML and CSS</p>
     <h2>About Me</h2>
-    <img src="Images/pfp.jpg" alt="Image not found" />
+    <img src="../Images/pfp.jpg" alt="Image not found" />
     <p class="username">@ShahariarArpo</p>
     <p>Hello <em>Everyone</em> >.<</p>
     <a href="https://github.com/shahariarpo" target="_blank">About Me</a>
