--- a/Resources/hyperlinks.html
+++ b/Resources/hyperlinks.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HyperLink</title>
   </head>
-  <a href="#css_section">CSS</a>
+  <a href="#css_section">Jump to CSS</a>
   <body>
-    <h2>HTML</h2>
+    <h2 id="html_section">HTML</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
       tempora? Amet repellendus beatae laboriosam suscipit nemo distinctio
